第二次尝试

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Xcode
-      uses: actions/setup-xcode@v2
-      with:
-        xcode-version: '14.3.1'
+#    - name: Set up Xcode
+#      uses: actions/setup-xcode@v2
+#      with:
+#        xcode-version: '14.3.1'
 
     - name: Install dependencies
       run: |
