--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd ${WORKSPACE}/dealers
-          /usr/local/bin/pod install
+#          cd ${WORKSPACE}/dealers
+#          /usr/local/bin/pod install
 
 
       - name: Build and Archive
