--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
 #          cd ${WORKSPACE}/dealers
-#          /usr/local/bin/pod install
+          /usr/local/bin/pod install
 
 
       - name: Build and Archive
