--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set Xcode signing
         run: |
           # 配置 Xcode 项目的签名
-          xcodebuild -project JenkinsTest.xcodeproj -scheme JenkinsTest CODE_SIGN_IDENTITY="Apple Development: Yaohui Fu (ZAN29V44ST)"  -allowProvisioningUpdates
+          xcodebuild -project JenkinsTest.xcodeproj -scheme JenkinsTest  -allowProvisioningUpdates
           
       - name: Build and Archive
         run: |
