--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,17 @@ jobs:
         run: |
           /usr/local/bin/pod install
 
+      - name: Configure Xcode signing
+        run: |
+          # 导入证书和描述文件的命令
+          security create-keychain -p 123456 build.keychain
+          security import path/to/certificate.p12 -P 123456 -A -t cert -f pkcs12 -k ~/Library/Keychains/build.keychain
+          security import path/to/profile.mobileprovision -k ~/Library/MobileDevice/Provisioning\ Profiles/build.keychain
+
+      - name: Unlock keychain
+        run: |
+          security unlock-keychain -p 123456 ~/Library/Keychains/build.keychain
+          
       - name: Set Xcode signing
         run: |
           # 配置 Xcode 项目的签名
