--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,13 +19,11 @@ jobs:
             p12-password: ${{ secrets.TRUSTY_CAR_PSW }}
 
       - name: Install the provisioning profile
-         env:
-            PROVISIONING_CERTIFICATE_BASE64: ${{ secrets.PROVISIONING_PROFILE_BASE64 }}
         run: |
       
             PP_PATH=$RUNNER_TEMP/0b012feb-aea9-4e90-b172-39986cb0f0f0.mobileprovision
             
-            echo -n "$PROVISIONING_CERTIFICATE_BASE64" | base64 --decode --output $PP_PATH
+            echo -n "${{ secrets.PROVISIONING_PROFILE_BASE64 }}" | base64 --decode --output $PP_PATH
             mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
             cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
 
