--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
 #        run: xcodebuild archive -project JenkinsTest.xcworkspace -scheme JenkinsTest -archivePath JenkinsTest.xcarchive
 
       - name: Export IPA
-          run: xcodebuild -exportArchive -archivePath build-output/JenkinsTest.xcarchive -exportPath build-output -exportOptionsPlist ExportOptions.plist
+        run: xcodebuild -exportArchive -archivePath build-output/JenkinsTest.xcarchive -exportPath build-output/ -exportOptionsPlist ExportOptions.plist
 
       - name: Upload IPA
         uses: actions/upload-artifact@v2
