--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,9 +35,9 @@ jobs:
         run: xcodebuild -resolvePackageDependencies -workspace JenkinsTest.xcworkspace -scheme JenkinsTest -configuration Release
         
         
-      - name: Build xArchive
-        run: |
-              xcodebuild -workspace JenkinsTest.xcworkspace -scheme JenkinsTest -configuration Release DEVELOPMENT_TEAM=${{ secrets.TEAM_ID }} -sdk 'iphoneos' -destination 'generic/platform=iOS' -archivePath build-output/JenkinsTest.xcarchive PROVISIONING_PROFILE=0b012feb-aea9-4e90-b172-39986cb0f0f0 clean archive CODE_SIGN_IDENTITY="iPhone Distribution"
+#      - name: Build xArchive
+#        run: |
+#              xcodebuild -workspace JenkinsTest.xcworkspace -scheme JenkinsTest -configuration Release DEVELOPMENT_TEAM=${{ secrets.TEAM_ID }} -sdk 'iphoneos' -destination 'generic/platform=iOS' -archivePath build-output/JenkinsTest.xcarchive PROVISIONING_PROFILE=0b012feb-aea9-4e90-b172-39986cb0f0f0 clean archive CODE_SIGN_IDENTITY="iPhone Distribution"
 
 #      - name: Print Archive Path
 #            run: echo "Archive path: $PWD/JenkinsTest.xcarchive"
@@ -49,13 +49,23 @@ jobs:
 #      - name: Archive
 #        run: xcodebuild archive -project JenkinsTest.xcworkspace -scheme JenkinsTest -archivePath JenkinsTest.xcarchive
 
+#      - name: Export IPA
+#        run: xcodebuild -exportArchive -archivePath build-output/JenkinsTest.xcarchive -exportPath build-output/ -exportOptionsPlist ExportOptions.plist PROVISIONING_PROFILE=0b012feb-aea9-4e90-b172-39986cb0f0f0
+#
+#      - name: Upload IPA
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: JenkinsTest
+#          path: JenkinsTest.ipa
+
+
+      - name: Archive
+        run: xcodebuild archive -workspace JenkinsTest.xcworkspace -scheme JenkinsTest -archivePath JenkinsTest.xcarchive
+
       - name: Export IPA
-        run: xcodebuild -exportArchive -archivePath build-output/JenkinsTest.xcarchive -exportPath build-output/ -exportOptionsPlist ExportOptions.plist PROVISIONING_PROFILE=0b012feb-aea9-4e90-b172-39986cb0f0f0
+        run: |
+          xcodebuild -exportArchive -archivePath JenkinsTest.xcarchive -exportOptionsPlist ExportOptions.plist -exportPath JenkinsTest.ipa
 
-      - name: Upload IPA
-        uses: actions/upload-artifact@v2
-        with:
-          name: JenkinsTest
-          path: JenkinsTest.ipa
-
-
+      - name: Upload to App Store
+        run: |
+          xcrun altool --upload-app -f YourApp.ipa -u diligencefu@sina.com -p kwby-cfyy-bchh-pawx --asc-provider ${{ secrets.TEAM_ID }}
