--- a/ExportOptions.plist
+++ b/ExportOptions.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>provisioningProfiles</key>
+	<string></string>
 	<key>teamID</key>
 	<string>F22YRQ2QK9</string>
 	<key>method</key>
