--- a/ExportOptions.plist
+++ b/ExportOptions.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>provisioningProfiles</key>
-	<string></string>
+	<string>/Users/fuyaohui/Library/MobileDevice/Provisioning\ Profiles/0b012feb-aea9-4e90-b172-39986cb0f0f0.mobileprovision</string>
 	<key>teamID</key>
 	<string>F22YRQ2QK9</string>
 	<key>method</key>
