--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,3 +73,9 @@ jobs:
 #      - name: Upload to App Store
 #        run: |
 #          xcrun altool --upload-app -f JenkinsTest.ipa -u diligencefu@sina.com -p kwby-cfyy-bchh-pawx --asc-provider F22YRQ2QK9 --type ios
+
+      - name: Upload IPA
+        uses: actions/upload-artifact@v2
+        with:
+          name: JenkinsTest IPA
+          path: JenkinsTest.ipa
