--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,9 +80,9 @@ jobs:
 #          name: JenkinsTest IPA
 #          path: JenkinsTest.ipa
 
-      - name: Upload to App Store
-        run: |
-            /Applications/Transporter.app/Contents/Frameworks/ContentDeliveryServices.framework/Versions/A/Frameworks/AppStoreService.framework/Versions/A/Support/altool --upload-app -f "/Users/fuyaohui/Downloads/JenkinsTestIPA/JenkinsTest.ipa" -u "diligencefu@sina.com" -p "kwby-cfyy-bchh-pawx" -t ios --output-format xml
+#      - name: Upload to App Store
+#        run: |
+#            /Applications/Transporter.app/Contents/Frameworks/ContentDeliveryServices.framework/Versions/A/Frameworks/AppStoreService.framework/Versions/A/Support/altool --upload-app -f "/Users/fuyaohui/Downloads/JenkinsTestIPA/JenkinsTest.ipa" -u "diligencefu@sina.com" -p "kwby-cfyy-bchh-pawx" -t ios --output-format xml
 
 
 #      - name: Install App Store Connect CLI
