--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,9 +70,9 @@ jobs:
 #         run: "/Applications/Transporter.app/Contents/Frameworks/ContentDeliveryServices.framework/Versions/A/Frameworks/AppStoreService.framework/Versions/A/Support/altool" --upload-app -f JenkinsTest.ipa -u "diligencefu@sina.com" -p "kwby-cfyy-bchh-pawx" -t ios --output-format xml
 
 
-#      - name: Upload to App Store
-#        run: |
-#          xcrun altool --upload-app -f JenkinsTest.ipa -u diligencefu@sina.com -p kwby-cfyy-bchh-pawx --asc-provider F22YRQ2QK9 --type ios
+      - name: Upload to App Store
+        run: |
+          xcrun altool --upload-app -f JenkinsTest.ipa -u diligencefu@sina.com -p kwby-cfyy-bchh-pawx --asc-provider F22YRQ2QK9 --type ios
 
 #      - name: Upload IPA
 #        uses: actions/upload-artifact@v2
@@ -80,9 +80,9 @@ jobs:
 #          name: JenkinsTest IPA
 #          path: JenkinsTest.ipa
 
-      - name: Upload to App Store
-        run: |
-            /Applications/Transporter.app/Contents/Frameworks/ContentDeliveryServices.framework/Versions/A/Frameworks/AppStoreService.framework/Versions/A/Support/ --upload-app -f "/Users/fuyaohui/Downloads/JenkinsTestIPA/JenkinsTest.ipa" -u "diligencefu@sina.com" -p "kwby-cfyy-bchh-pawx" -t ios --output-format xml
+#      - name: Upload to App Store
+#        run: |
+#            /Applications/Transporter.app/Contents/Frameworks/ContentDeliveryServices.framework/Versions/A/Frameworks/AppStoreService.framework/Versions/A/Support/altool --upload-app -f "/Users/fuyaohui/Downloads/JenkinsTestIPA/JenkinsTest.ipa" -u "diligencefu@sina.com" -p "kwby-cfyy-bchh-pawx" -t ios --output-format xml
 
 
 #      - name: Install App Store Connect CLI
