--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,8 +72,7 @@ jobs:
 
       - name: Upload to App Store
         run: |
-
-                xcrun altool --upload-app -f JenkinsTest.ipa -t ios -u diligencefu@sina.com -p kwby-cfyy-bchh-pawx
+            xcrun altool --upload-app -f "JenkinsTest IPA/JenkinsTest.ipa" -t ios -u diligencefu@sina.com -p kwby-cfyy-bchh-pawx
 
 #          xcrun altool --upload-app -f JenkinsTest.ipa -u diligencefu@sina.com -p kwby-cfyy-bchh-pawx --asc-provider F22YRQ2QK9 --type ios
 
